# victory_garden

./: .gitignore  README.md  greenhouse.service
contracts/: README.md
contracts/examples/: node-state-legacy-rssi.json  node-state-optional-nulls.json  node-state-partial.json  node-state-v1.json
deploy/: README.md  build_desktop_installer.sh  build_firmware_bundles.sh  build_release.sh  install_pi.sh  pi_assign_and_publish.sh  pi_claim_and_publish.sh  pi_cleanup_validation_data.sh  pi_debug_mqtt_consumer.sh  pi_post_install_check.sh  pi_queue_debug.sh  pi_validate_actuator.sh  pi_validate_request_reading.sh  victory_garden.env.example
deploy/pi_image/: README.md  build_pi_image.sh  generate_imager_repo.py
desktop_installer/: README.md  index.html  package-lock.json  package.json  vite.config.js
desktop_installer/src/: main.js  styles.css
desktop_installer/src-tauri/: Cargo.toml  tauri.conf.json
desktop_installer/src-tauri/capabilities/: default.json
desktop_installer/src-tauri/src/: main.rs
docs/: actuator_hardware.md  architecture.md  calibration.md  configuration.md  logging.md  mqtt.md  quickstart.md  seed-data.md  setup.md  wiring.md
docs/diagrams/: 01-architecture.mmd  02-sequence.mmd  03-dataflow.mmd  04-erd.mmd  05-state.mmd  06-class.mmd
docs/planning/: kanban.md
firmware-bundles/: pico2_w_actuator_node.uf2  pico2_w_sensor_node.uf2  pico_w_actuator_node.uf2  pico_w_sensor_node.uf2
firmware/arduino/mkr1010_sensor_node/: README.md  mkr1010_sensor_node.ino  node_config.example.h  node_storage.cpp  node_storage.h  provisioning.cpp  provisioning.h
firmware/cmake/: select_arm_gnu_toolchain.cmake
firmware/pico_w_actuator_node/: .gitignore  CMakeLists.txt  README.md
firmware/pico_w_actuator_node/src/: config.h  config_local.h.example  lwipopts.h  main.c  mqtt_node.c  mqtt_node.h  node_config.c  time_sync.c  time_sync.h  topics.c  topics.h  wifi.h
firmware/pico_w_sensor_node/: .gitignore  CMakeLists.txt  README.md
firmware/pico_w_sensor_node/src/: config.h  config_local.h.example  lwipopts.h  main.c  mqtt_node.c  mqtt_node.h  node_config.c  seesaw.c  seesaw.h  sensors.c  sensors.h  serial_test_main.c  time_sync.c  time_sync.h  topics.c  topics.h  wifi.c
python_tools/: README.md  TEST_SUITE_SUMMARY.md  actuator_main.py  pyproject.toml  pytest.ini  requirements-controller.txt
python_tools/config/: crops.yaml  zones.yaml
python_tools/tests/: conftest.py  test_actuator.py  test_calibration.py  test_config.py  test_controller_config.py  test_controller_contract.py  test_controller_runtime.py  test_decision.py  test_integration.py  test_mqtt_discovery_responder.py  test_pico_flasher_helper.py  test_profiles.py  test_relay_gpio.py  test_schemas.py  test_state.py  test_state_store.py  test_structured_logging.py
python_tools/tools/: mqtt_discovery_responder.py  pico_flasher_helper.py  relay_actuator_hook.py  run_loop.py  simulate_run.py  test_relay_gpio.py
python_tools/watering/: actuator.py  calibration.py  config.py  contracts.py  controller.py  controller_cli.py  controller_mqtt.py  controller_runtime.py  decision.py  profiles.py  relay_gpio.py  schemas.py  state.py  state_store.py  structured_logging.py
ruby_service/: Dockerfile  Gemfile  README.md
ruby_service/app/controllers/: actuator_statuses_controller.rb  (+12 more)
ruby_service/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  importmap.rb  routes.rb
ruby_service/db/: schema.rb  seeds.rb
ruby_service/lib/: mqtt_client.rb
ruby_service/script/: load_queue_schema.rb  seed_demo_data.rb
ruby_service/test/: test_helper.rb
(+132 files in other folders)
