[package]
name = "victory-garden-desktop-installer"
version = "0.1.0"
description = "Desktop installer and Pico flasher for Victory Garden"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.6"
tauri = { version = "2.11.2", features = [] }
